css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}








* {
    box-sizing: border-box;
    
}

html, body {
    height: 100%;
    font-family: 'Roboto', sans-serif;
}

header{
    display-flex:flex;
    flex-direction: row;
    width:100%;

}

#lambdaLogo img{
    src: url('lambda-black.png');
    height:2rem;
    width:auto;
}

.jumboImg{
    align-content:center;
    width:100%;
}

header .navBar{
        display:flex;
        justify-content: space-evenly;
        flex-direction: row;
        width:70%;
        flex-wrap:wrap;
        margin:3% auto;
}

  .bStyle{
    font-size:1rem; 
    border-style:none;
    justify-content: space-evenly;
    background-color: transparent;
  
    
  }


h1, h2, h3, h4, h5 {
    font-size: 18px;
    margin-bottom: 15px;
    font-family: 'Rubik', sans-serif;
}

p {
    line-height: 1.4;
}

.container {
    width: 800px;
    margin: 0 auto;
}
#aboutPar{
    margin:2rem 0rem 3rem 2rem;
    padding-bottom:1.5rem;
    border-bottom:1.5px black dotted;
    width:100%
}

.top-content {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    margin-bottom: 20px;
    border-bottom: 1px dashed black;
}

.top-content .text-container {
    width: 48%;
    padding: 0 1%;
    padding-bottom: 20px;  
}

.middle-content {
    margin-bottom: 20px;
    border-bottom: 1px dashed black;
}

.middle-content h2 {
    padding: 0 2%;
    margin-bottom: 0;
}

.middle-content .boxes {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

.middle-content .boxes .box {
    width: 12.5%;
    height: 100px;
    background: black;
    margin: 20px 2.5%;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}

/*BOX COLORS*/
#box1{
background-color:teal;
}

#box2{
    background-color:gold;
}
#box3{
    background-color:cadetblue;
}
#box4{
    background-color:coral;
}
#box5{
    crimson
}
#box6{
    background-color:forestgreen;
}
#box7{background-color:darkorchid;
}
#box8{background-color:hotpink;
}
#box9{background-color:indigo;
}
#box10{background-color:dodgerblue;




}
.bottom-content {
    display: flex;
    margin: 0 2% 20px;
    justify-content: space-around;
}

.bottom-content .text-container {
    padding-right: 4%;
}

.bottom-content .text-container:last-child {
    padding-right: 0;
}

footer {
    width: 100%;
    background: black;
}

footer nav {
    width: 60%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px 2%;
    font-size: 14px;
}

footer nav a {
    color: white;
    text-decoration: none;
}

